# white-belt

./: .gitignore  CMakeLists.txt  input.txt  main.cpp
even-numbers/: main.cpp
maximizator/: main.cpp
minimum-string/: main.cpp
move-strings/: main.cpp
product-sale-range/: main.cpp
queue/: main.cpp
second-entry/: main.cpp
set-1/: main.cpp
set-2/: main.cpp
sqrt-equation/: main.cpp
timetable/: main.cpp
week_1-2/anagram/: main.cpp
week_1-2/binary-numbers/: main.cpp
week_1-2/bus-stop/: main.cpp
week_1-2/countries-dictionary/: main.cpp
week_1-2/divide/: main.cpp
week_1-2/evklid-algorithm/: main.cpp
week_1-2/factorial/: main.cpp
week_1-2/filter-palindrome/: main.cpp
week_1-2/minimum-string/: main.cpp
week_1-2/palindrome/: main.cpp
week_1-2/reverse/: main.cpp
week_1-2/reverse-2/: main.cpp
week_1-2/route-set/: main.cpp
week_1-2/routes/: main.cpp
week_1-2/second-entry/: main.cpp
week_1-2/synonym/: main.cpp
week_1-2/temperature/: main.cpp
week_1-2/timetable/: main.cpp
week_3/class-methods/: main.cpp
week_3/names-constructor/: main.cpp
week_3/reversible-string/: main.cpp
week_3/sort-module/: main.cpp
week_3/struct-names/: main.cpp
week_3/struct-strings-sort/: main.cpp
week_3/test-class/: main.cpp
week_4/Function/: main.cpp
week_4/Rational/: main.cpp
week_4/TimeServer/: main.cpp
week_4/ValidateRational/: main.cpp
week_4/ensure_equal/: main.cpp
week_4/iostream/: main.cpp
week_4/iostream_double/: main.cpp
